--- a/resources/config.dev.yaml
+++ b/resources/config.dev.yaml
@@ -53,4 +53,7 @@ cors:
   #  allow-credentials: true
 extend:             # 扩展项（此处没有提供具体说明）
   authBaseUrl: http://localhost:8000
-    
+# mongodb链接配置
+mongodb:
+  url: mongodb://127.0.0.1:27017 # 链接地址
+  timeout: 600 # 超时时长
