--- a/resources/config.dev.yaml
+++ b/resources/config.dev.yaml
@@ -56,4 +56,5 @@ extend:             # 扩展项（此处没有提供具体说明）
 # mongodb链接配置
 mongodb:
   url: mongodb://127.0.0.1:27017 # 链接地址
+  open: false # 是否启用
   timeout: 600 # 超时时长
